add templates and frontend works

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,12 +1,370 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coming Soon</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Disease Prediction</title>
+  <meta name="description" content="Free Bootstrap Theme by BootstrapMade.com">
+  <meta name="keywords"
+    content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" type="text/css" href="css/style.css"> -->
+  <link rel="stylesheet" href="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/css/style.css">
+
 </head>
-<body>
-    
+
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+  <!--top-section-->
+  <section id="top-section" class="top-section">
+    <div class="bg-color">
+      <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+          <div class="col-md-12">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#"><img src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/logo.png" class="img-responsive"
+                  style="width:400px;height: 50px; margin-top: -18px;"></a>
+            </div>
+            <div class="collapse navbar-collapse navbar-right" id="myNavbar">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="#top-section">Home</a></li>
+
+                <li class=""><a href="#about">About</a></li>
+                <li class=""><a href="#prediction-section">Prediction</a></li>
+                <li class=""><a href="#developer">Developer</a></li>
+                <li class=""><a href="#tools">Tools</a></li>
+
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <div class="container">
+        <div class="row">
+          <div class="top-section-info">
+            <div class="top-section-logo text-center">
+              <img src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/logo.png" alt="logo" style="width:400px;height: 150px; margin-top: -30px;"
+                class="img-responsive">
+            </div>
+            <div class="top-section-text text-center">
+              <h1 class="white">Onsite Health Diagnostic</h1>
+              <p>Input the facts and see your result in just one click ! Our model will try to predict your disease.
+                <br>
+                We pray for your good health!</p>
+              <a href="disease.html" class="btn btn-appoint">Predict the Disease</a>
+            </div>
+            <div class="overlay-detail text-center">
+              <a href="#prediction-section"><i class="fa fa-angle-down"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--/ top-section-->
+  <!--prediction-section-->
+  <section id="prediction-section" class="section-padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 col-sm-4">
+          <h2 class="ser-title">Our Prediction</h2>
+          <hr class="botm-line">
+          <p>The coalescence of neural networks & web development made very user interactive web applications which
+            allows users to predict the disease based on their medical reports or radiography images.
+            Our Machine learning algorithm has been tested with plenty of datasets with very good accuracy. We don’t
+            give 100% assurance about our model. Hence, users need to try it at their own risk.
+          </p>
+        </div>
+        <div class="col-md-4 col-sm-4">
+          <div class="prediction-section-info">
+            <div class="icon">
+              <i class="fa fa-heart"></i>
+            </div>
+            <div class="icon-info">
+              <h4>Heart Disease</h4>
+              <p>Cardiovascular disease (CVD) is a class of diseases that involve the heart or blood vessels.
+                Cardiovascular diseases are the leading cause of death worldwide except Africa. Together CVD resulted in
+                17.9 million deaths (32.1%) in 2015, up from 12.3 million (25.8%) in 1990. You can use our predictive
+                model to predict whether you have CVD or not.
+              </p>
+            </div>
+          </div>
+          <div class="prediction-section-info">
+            <div class="icon">
+              <i class="fa fa-ambulance"></i>
+            </div>
+            <div class="icon-info">
+              <h4>Kidney Disease</h4>
+              <p>Kidney disease, or renal disease, technically referred to as nephropathy, is damage to or disease of a
+                kidney, Nephritis an inflammatory kidney disease and has several types according to the location of the
+                inflammation. Inflammation can be diagnosed by blood test. Nephrosis is a non-inflammatory kidney
+                disease. Make sure you try our predictive model in order to see your result.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-4">
+          <div class="prediction-section-info">
+            <div class="icon">
+              <i class="fa fa-user-md"></i>
+            </div>
+            <div class="icon-info">
+              <h4>Breast cancer</h4>
+              <p>Breast cancer most commonly presents as a lump that feels different from the rest of the breast tissue.
+                More than 80% of cases are discovered when a person detects such a lump with the fingertips.
+                Verify whether you have Malignant or Benign. Our Machine Learning model will try it’s best to give the
+                correct result.
+              </p>
+            </div>
+          </div>
+          <div class="prediction-section-info">
+            <div class="icon">
+              <i class="fa fa-medkit"></i>
+            </div>
+            <div class="icon-info">
+              <h4>Brain tumor</h4>
+
+              <p> A brain tumor occurs when abnormal cells form within the brain There are two main types of tumors:
+                malignant tumors and benign (non-cancerous) tumors. These can be further classified as primary tumors
+                which start within the brain, and secondary tumors, which most commonly have spread from tumors located
+                outside the brain, known as brain metastasis tumors.
+              </p>
+              <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--/ prediction-section-->
+
+  <!--about-->
+  <section id="about" class="section-padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-sm-4 col-xs-12">
+          <div class="section-title">
+            <h2 class="head-title lg-line">Attention <br>users!!</h2>
+            <hr class="botm-line">
+            <p class="sec-para">Please, read these instructions before using our machine learning models. If you want to
+              try it for learning purposes ,you can proceed to our prediction section.</p>
+
+          </div>
+        </div>
+        <div class="col-md-9 col-sm-8 col-xs-12">
+          <div style="visibility: visible;" class="col-sm-9 more-features-box">
+            <div class="more-features-box-text">
+              <div class="more-features-box-text-icon"> <i class="fa fa-angle-right" aria-hidden="true"></i> </div>
+              <div class="more-features-box-text-description">
+                <h3>We cannot assure you perfection about our algorithms</h3>
+                <p>As this project is done for educational purposes, our machine may not predict the expected result.
+                </p>
+              </div>
+            </div>
+            <div class="more-features-box-text">
+              <div class="more-features-box-text-icon"> <i class="fa fa-angle-right" aria-hidden="true"></i> </div>
+              <div class="more-features-box-text-description">
+                <h3>Have proper supervision before techng</h3>
+                <p>Sometimes, our algorithm gives weird outcomes. So, it is better to be used by health professionals
+                  who want to save time and have some experience in the related area.</p>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--/ about-->
+  <!--Developers-->
+  <section id="developer" class="section-padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="ser-title"> Developers</h2>
+          <hr class="botm-line">
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-6">
+          <div class="thumbnail">
+            <img src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/Developernishant.jpeg" alt="Nishant Banjade" class="team-img">
+            <div class="caption">
+              <h3>Nishant Banjade</h3>
+              <p>Machine learning</p>
+              <ul class="list-inline">
+                <li><a href="http://nixhantme.herokuapp.com/"><i class="fa fa-globe"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/nbanjade/"><i class="fa fa-linkedin"></i></a></li>
+                <li><a href="https://github.com/Nix-code"><i class="fa fa-github"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-6">
+          <div class="thumbnail">
+            <img src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/Developerrohan.jpeg" alt="rohan Patankar" class="team-img">
+            <div class="caption">
+              <h3>Rohan Patankar</h3>
+              <p>Machine Learning</p>
+              <ul class="list-inline">
+                <li><a href="http://rohanpatankar.netlify.app/"><i class="fa fa-globe"></i></a></li>
+                <li><a href="https://www.linkedin.com/mwlite/in/rohan-patankar-2aa707213"><i
+                      class="fa fa-linkedin"></i></a></li>
+                <li><a href="https://github.com/ROHANPATAKAR"><i class="fa fa-github"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-6">
+          <div class="thumbnail">
+            <img src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/Developerapsara.jpeg" alt="Apsara Budhathoki" class="team-img">
+            <div class="caption">
+              <h3>Apsara Budhathoki</h3>
+              <p>Web Design & Development</p>
+              <ul class="list-inline">
+                <li><a href="https://apsarabudhathoki.github.io/apsarabudathoki/"><i class="fa fa-globe"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/apsara-budhathoki-b0884a1b4/"><i
+                      class="fa fa-linkedin"></i></a></li>
+                <li><a href="https://github.com/ApsaraBudhathoki"><i class="fa fa-github"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    </div>
+  </section>
+  <!--/ Developers-->
+  <!--Tools $ Technologies-->
+  <section id="tools" class="section-padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="ser-title">Tools & Technologies</h2>
+          <hr class="botm-line">
+        </div>
+        <div class="col-md-4 col-sm-4">
+          <div class="tech-details">
+            <!-- Paragraph -->
+            <p>
+              We are using machine learning algorithms like Logistic Regression, Decision Tree Classifier, Random
+              Forests, as well as Artificial Neural Networks in order to train our model along with the ML libraries
+              such as scikit-learn, numpy, pandas, matplotlib, seaborn & Tensorflow.
+            </p>
+          </div>
+          <div class="tech-info">
+            <!-- tools icon-->
+            <a href="https://scikit-learn.org/"><img src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/sklearn.png" alt="" class="img-responsive"></a>
+            <!-- Tools -->
+            <h3>Machine<span>Learning</span></h3>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-4">
+          <div class="tech-details">
+            <!-- Paragraph -->
+            <p>For image processing, we are using convolutional neural networks (CNN) along with the Inception model to
+              predict the best result. We are training over about 5k-10k image dataset with model accuracy more than 85%
+              each. We are using scikit-learn, Tensorflow & Keras for models.</p>
+          </div>
+          <div class="tech-info">
+            <!--tools icon -->
+            <a href="https://www.tensorflow.org/api_docs"><img src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/tensorflow.jpg" alt="" class="img-responsive"></a>
+            <!-- tools-->
+            <h3>Deep<span>Learning</span></h3>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-4">
+          <div class="tech-details">
+            <!-- Paragraph -->
+            <p>Good web UI & design is the asset of any project. Web design includes some basic knowledge of our
+              project, easy user interface and better functionalities. We are using HTML, CSS, Bootstrap & Javascript
+              for the front end & Flask for model deployment.</p>
+          </div>
+          <div class="tech-info">
+            <!--tools icon -->
+            <a href="https://flask.palletsprojects.com/en/2.0.x/"><img src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/flask-logo.png" alt=""
+                class="img-responsive"></a>
+            <!-- Tools -->
+            <h3>Web<span>Development</span></h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--/ Tools & Technologies-->
+
+  <!--footer-->
+  <footer id="footer">
+    <div class="top-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-sm-4 marb20">
+            <div class="ftr-tle">
+              <h4 class="white no-padding">About Us</h4>
+            </div>
+            <div class="info-sec">
+              <p>We are 3rd year engineering students who love to explore new tools & technologies and are highly
+                enthusiastic towards computer science. OHD (Onsite Health Diagnostic) is an open source project under
+                MIT Licence.</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-4 marb20">
+            <div class="ftr-tle">
+              <h4 class="white no-padding">Quick Links</h4>
+            </div>
+            <div class="info-sec">
+              <ul class="quick-info">
+                <li><a href="index.html"><i class="fa fa-circle"></i>Home</a></li>
+                <li><a href="#contact"><i class="fa fa-circle"></i>About</a></li>
+                <li><a href="#prediction"><i class="fa fa-circle"></i>Prediction</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-4 marb20">
+            <div class="ftr-tle">
+              <h4 class="white no-padding">Reference</h4>
+            </div>
+            <div class="info-sec">
+              <ul class="social-icon">
+                <li class="bglight-blue"><i class="fa fa-github"></i></li>
+                <li class="bgdark-blue"><i class="fa fa-google"></i></li>
+                <li class="bgred"><i class="fa fa-globe"></i></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-line">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            © Copyright Onsite Health Diagnostic (OHD). All Rights Reserved
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!--/ footer-->
+
+  <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/jquery.min.js"></script>
+  <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/jquery.easing.min.js"></script>
+  <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/bootstrap.min.js"></script>
+  <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/custom.js"></script>
+  <script src="contactform/contactform.js"></script>
+
 </body>
+
 </html>
