--- a/src/templates/disease.html
+++ b/src/templates/disease.html
@@ -9,11 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="{{url_for('src', filename='/static/css/font-awesome.min.css')}}">
+  <link rel="stylesheet" type="text/css"  href="{{url_for('src', filename='/static/css/bootstrap.min.css')}}">
  
-  <link rel="stylesheet" href="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/css/style.css">
-
+  <link rel="stylesheet"  href="{{url_for('src', filename='/static/css/style.css')}}">
 </head>
 
 <body>
@@ -28,7 +27,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="#"><img src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/logo.png" class="img-responsive"
+                            <a class="navbar-brand" href="#"><img src="/src/static/img/logo.png" class="img-responsive"
                                     style="width:400px;height: 50px; margin-top: -18px;"></a>
                         </div>
                             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
@@ -155,10 +154,10 @@
             </section>
 
 
-            <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/jquery.min.js"></script>
-            <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/jquery.easing.min.js"></script>
-            <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/bootstrap.min.js"></script>
-            <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/custom.js"></script>
+            <script src="/src/static/js/jquery.min.js"></script>
+            <script src="/src/static/js/jquery.easing.min.js"></script>
+            <script src="/src/static/js/bootstrap.min.js"></script>
+            <script src="/src/static/js/custom.js"></script>
             <script src="contactform/contactform.js"></script>
 </body>
 
