--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,13 +12,16 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/css/bootstrap.min.css">
-  <!-- <link rel="stylesheet" type="text/css" href="css/style.css"> -->
-  <link rel="stylesheet" href="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/css/style.css">
-
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/font-awesome.min.css')}}">
+  <link rel="stylesheet" type="text/css"  href="{{url_for('static', filename='/css/bootstrap.min.css')}}">
+ 
+  {% block custom_css %}
+  <!-- Custom css file -->
+  <link rel="stylesheet"  href="{{url_for('static', filename='css/style.css')}}">
+  {% endblock custom_css %}
 </head>
 
+{% block body %}
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
   <!--top-section-->
   <section id="top-section" class="top-section">
@@ -32,7 +35,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/logo.png" class="img-responsive"
+              <a class="navbar-brand" href="#"><img src="{{ url_for('static',filename='img/logo.png')}}" class="img-responsive"
                   style="width:400px;height: 50px; margin-top: -18px;"></a>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
@@ -53,7 +56,7 @@
         <div class="row">
           <div class="top-section-info">
             <div class="top-section-logo text-center">
-              <img src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/logo.png" alt="logo" style="width:400px;height: 150px; margin-top: -30px;"
+              <img src="{{url_for('static',filename='img/logo.png')}}" alt="logo" style="width:400px;height: 150px; margin-top: -30px;"
                 class="img-responsive">
             </div>
             <div class="top-section-text text-center">
@@ -169,7 +172,7 @@
               <div class="more-features-box-text-icon"> <i class="fa fa-angle-right" aria-hidden="true"></i> </div>
               <div class="more-features-box-text-description">
                 <h3>We cannot assure you perfection about our algorithms</h3>
-                <p>As this project is done for educational purposes, our machine may not predict the expected result.
+                <p>As this project is done for educational purposes, proper medical guidence is required for perfection.
                 </p>
               </div>
             </div>
@@ -198,10 +201,10 @@
         </div>
         <div class="col-md-3 col-sm-3 col-xs-6">
           <div class="thumbnail">
-            <img src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/Developernishant.jpeg" alt="Nishant Banjade" class="team-img">
+            <img src="{{url_for('static',filename='img/Developernishant.jpeg')}}" alt="Nishant Banjade" class="team-img">
             <div class="caption">
               <h3>Nishant Banjade</h3>
-              <p>Machine learning</p>
+              <p>Machine learning Developer</p>
               <ul class="list-inline">
                 <li><a href="http://nixhantme.herokuapp.com/"><i class="fa fa-globe"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/nbanjade/"><i class="fa fa-linkedin"></i></a></li>
@@ -212,10 +215,10 @@
         </div>
         <div class="col-md-3 col-sm-3 col-xs-6">
           <div class="thumbnail">
-            <img src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/Developerrohan.jpeg" alt="rohan Patankar" class="team-img">
+            <img src="{{url_for('static',filename='img/Developernishant.jpeg')}}" alt="rohan Patankar" class="team-img">
             <div class="caption">
               <h3>Rohan Patankar</h3>
-              <p>Machine Learning</p>
+              <p>Machine Learning Developer</p>
               <ul class="list-inline">
                 <li><a href="http://rohanpatankar.netlify.app/"><i class="fa fa-globe"></i></a></li>
                 <li><a href="https://www.linkedin.com/mwlite/in/rohan-patankar-2aa707213"><i
@@ -227,7 +230,7 @@
         </div>
         <div class="col-md-3 col-sm-3 col-xs-6">
           <div class="thumbnail">
-            <img src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/Developerapsara.jpeg" alt="Apsara Budhathoki" class="team-img">
+            <img src="{{url_for('static',filename='img/Developerapsara.jpeg')}}" alt="Apsara Budhathoki" class="team-img">
             <div class="caption">
               <h3>Apsara Budhathoki</h3>
               <p>Web Design & Development</p>
@@ -265,7 +268,7 @@
           </div>
           <div class="tech-info">
             <!-- tools icon-->
-            <a href="https://scikit-learn.org/"><img src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/sklearn.png" alt="" class="img-responsive"></a>
+            <a href="https://scikit-learn.org/"><img src="{{url_for('static',filename='img/sklearn.png')}}" alt="sklearnimage" class="img-responsive"></a>
             <!-- Tools -->
             <h3>Machine<span>Learning</span></h3>
           </div>
@@ -279,7 +282,7 @@
           </div>
           <div class="tech-info">
             <!--tools icon -->
-            <a href="https://www.tensorflow.org/api_docs"><img src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/tensorflow.jpg" alt="" class="img-responsive"></a>
+            <a href="https://www.tensorflow.org/api_docs"><img src="{{url_for('static',filename='img/tensorflow.jpg')}}" alt="tensorflow-image" class="img-responsive"></a>
             <!-- tools-->
             <h3>Deep<span>Learning</span></h3>
           </div>
@@ -293,7 +296,7 @@
           </div>
           <div class="tech-info">
             <!--tools icon -->
-            <a href="https://flask.palletsprojects.com/en/2.0.x/"><img src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/flask-logo.png" alt=""
+            <a href="https://flask.palletsprojects.com/en/2.0.x/"><img src="{{url_for('static',filename='img/flask-logo.png')}}" alt="flask-logo"
                 class="img-responsive"></a>
             <!-- Tools -->
             <h3>Web<span>Development</span></h3>
@@ -358,13 +361,14 @@
     </div>
   </footer>
   <!--/ footer-->
-
-  <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/jquery.min.js"></script>
-  <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/jquery.easing.min.js"></script>
-  <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/bootstrap.min.js"></script>
-  <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/custom.js"></script>
+  <script src="{{url_for('static',filename='js/jquery.min.js')}}"></script>
+  <script src="{{url_for('static',filename='js/jquery.easing.min.js')}}"></script>
+  <script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
+  <script src="{{url_for('static',filename='js/custom.js')}}"></script>
   <script src="contactform/contactform.js"></script>
 
+{% endblock body %}
+  
 </body>
 
 </html>
