--- a/src/templates/disease.html
+++ b/src/templates/disease.html
@@ -9,10 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{{url_for('src', filename='/static/css/font-awesome.min.css')}}">
-  <link rel="stylesheet" type="text/css"  href="{{url_for('src', filename='/static/css/bootstrap.min.css')}}">
- 
-  <link rel="stylesheet"  href="{{url_for('src', filename='/static/css/style.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/font-awesome.min.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/bootstrap.min.css')}}">
+
+    <link rel="stylesheet" href="{{url_for('static', filename='/css/style.css')}}">
 </head>
 
 <body>
@@ -27,138 +27,139 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="#"><img src="/src/static/img/logo.png" class="img-responsive"
-                                    style="width:400px;height: 50px; margin-top: -18px;"></a>
+                            <a class="navbar-brand" href="#"><img src="{{url_for('static', filename='img/logo.png')}}"
+                                    class="img-responsive" style="width:400px;height: 50px; margin-top: -18px;"></a>
                         </div>
-                            <div class="collapse navbar-collapse navbar-right" id="myNavbar">
-                                <ul class="nav navbar-nav">
-                                    <li class="active"><a href="index.html">Home</a></li>
+                        <div class="collapse navbar-collapse navbar-right" id="myNavbar">
+                            <ul class="nav navbar-nav">
+                                <li class="active"><a href="{{url_for('index')}}">Home</a></li>
 
-                                    <li class=""><a href="#about">About</a></li>
-                                    <li class=""><a href="#prediction-section">Prediction</a></li>
-                                    
-                               </ul>
-                            </div>
+                                <li class=""><a href="#about">About</a></li>
+                                <li class=""><a href="#prediction-section">Prediction</a></li>
+
+                            </ul>
                         </div>
                     </div>
+                </div>
             </nav>
         </div>
     </section>
 
-            <!--about-->
-            <section id="about" class="section-padding">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-3 col-sm-4 col-xs-12">
-                            <div class="section-title">
-                                <h2 class="head-title lg-line">Disease<br>Prediction</h2>
-                                <hr class="botm-line">
-                                <p class="sec-para">Please, read these instructions before using our machine learning
-                                    models. If you want to try it for learning purposes ,you can proceed to our
-                                    prediction section.</p>
+    <!--about-->
+    <section id="about" class="section-padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-4 col-xs-12">
+                    <div class="section-title">
+                        <h2 class="head-title lg-line">Disease<br>Prediction</h2>
+                        <hr class="botm-line">
+                        <p class="sec-para">Please, read these instructions before using our machine learning
+                            models. If you want to try it for learning purposes ,you can proceed to our
+                            prediction section.</p>
+
+                    </div>
+                </div>
+                <div class="col-md-9 col-sm-8 col-xs-12">
+                    <div style="visibility: visible;" class="col-sm-9 more-features-box">
+                        <div class="more-features-box-text">
+                            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
+                                    aria-hidden="true"></i> </div>
+                            <div class="more-features-box-text-description">
+                                <h3>Heart Disease</h3>
+                                <p>Together CVD resulted in
+                                    17.9 million deaths (32.1%) in 2015, up from 12.3 million (25.8%) in 1990.
+                                </p>
+                                <a href="#" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+                            </div>
+                        </div>
+                        <div class="more-features-box-text">
+                            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
+                                    aria-hidden="true"></i> </div>
+                            <div class="more-features-box-text-description">
+                                <h3>Breast Cancer</h3>
+                                <p>Breast cancer is better to be used by
+                                    health professionals who want to save time and have some experience in the
+                                    related area.</p>
+                                <a href="#" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
 
                             </div>
                         </div>
-                        <div class="col-md-9 col-sm-8 col-xs-12">
-                            <div style="visibility: visible;" class="col-sm-9 more-features-box">
-                                <div class="more-features-box-text">
-                                    <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
-                                            aria-hidden="true"></i> </div>
-                                    <div class="more-features-box-text-description">
-                                        <h3>Heart Disease</h3>
-                                        <p>Together CVD resulted in
-                                            17.9 million deaths (32.1%) in 2015, up from 12.3 million (25.8%) in 1990.
-                                        </p>
-                                        <a href="Heartdisease.html" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
-                                    </div>
-                                </div>
-                                <div class="more-features-box-text">
-                                    <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
-                                            aria-hidden="true"></i> </div>
-                                    <div class="more-features-box-text-description">
-                                        <h3>Breast Cancer</h3>
-                                        <p>Breast cancer is better to be used by
-                                            health professionals who want to save time and have some experience in the
-                                            related area.</p>
-                                            <a href="Breastcancer.html" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+                        <div class="more-features-box-text">
+                            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
+                                    aria-hidden="true"></i> </div>
+                            <div class="more-features-box-text-description">
+                                <h3>Diabetes</h3>
+                                <p>Diabetes mellitus, commonly known as just diabetes, is a group of metabolic disorders
+                                    characterized by a high blood sugar level over a prolonged period of time.
+                                </p>
+                                <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+                            </div>
 
-                                    </div>
-                                </div>
-                                <div class="more-features-box-text">
-                                    <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
-                                            aria-hidden="true"></i> </div>
-                                    <div class="more-features-box-text-description">
-                                        <h3>Diabetes</h3>
-                                        <p>Diabetes mellitus, commonly known as just diabetes, is a group of metabolic disorders characterized by a high blood sugar level over a prolonged period of time.
-                                        </p>
-                                        <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
-                                    </div>
+                        </div>
+                        <div class="more-features-box-text">
+                            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
+                                    aria-hidden="true"></i> </div>
+                            <div class="more-features-box-text-description">
+                                <h3>Thyroid Detection</h3>
+                                <p>The thyroid, or thyroid gland, is an endocrine gland in vertebrates.It is located at the front of the neck, below the Adam's apple. </p>
+                                <a href="#" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+                            </div>
+                        </div>
+                        <div class="more-features-box-text">
+                            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
+                                    aria-hidden="true"></i> </div>
+                            <div class="more-features-box-text-description">
+                                <h3>Pneumonia Detection</h3>
+                                <p>Pneumonia is an inflammatory condition of the lung primarily affecting the small air
+                                    sacs known as alveoli.
+                                </p>
+                                <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+                            </div>
+                        </div>
+                        <div class="more-features-box-text">
+                            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
+                                    aria-hidden="true"></i> </div>
+                            <div class="more-features-box-text-description">
+                                <h3>Brain-tumor Detection</h3>
+                                <p> A brain tumor occurs when abnormal cells form within the brain There are two main
+                                    types of tumors:
+                                    malignant tumors and benign (non-cancerous) tumors
+                                </p>
+                                <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+                            </div>
+                        </div>
+                        <div class="more-features-box-text">
+                            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
+                                    aria-hidden="true"></i> </div>
+                            <div class="more-features-box-text-description">
+                                <h3>Malaria Detection</h3>
+                                <p>Malaria is a mosquito-borne infectious disease that affects humans and other animals
+                                </p>
+                                <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+                            </div>
+                        </div>
 
-                                </div>
-                                <div class="more-features-box-text">
-                                    <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
-                                            aria-hidden="true"></i> </div>
-                                    <div class="more-features-box-text-description">
-                                        <h3>Thyroid Detection</h3>
-                                        <p>The thyroid, or thyroid gland, is an endocrine gland in vertebrates.It is located at the front of the neck, below the Adam's apple
-                                        </p>
-                                        <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
-                                    </div>
-                                </div>
-                                <div class="more-features-box-text">
-                                    <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
-                                            aria-hidden="true"></i> </div>
-                                    <div class="more-features-box-text-description">
-                                        <h3>Pneumonia Detection</h3>
-                                        <p>Pneumonia is an inflammatory condition of the lung primarily affecting the small air sacs known as alveoli.
-                                        </p>
-                                        <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
-                                    </div>
-                                </div>
-                                <div class="more-features-box-text">
-                                    <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
-                                            aria-hidden="true"></i> </div>
-                                    <div class="more-features-box-text-description">
-                                        <h3>Brain-tumor Detection</h3>
-                                        <p> A brain tumor occurs when abnormal cells form within the brain There are two main types of tumors:
-                                            malignant tumors and benign (non-cancerous) tumors
-                                        </p>
-                                        <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
-                                    </div>
-                                </div>
-                                <div class="more-features-box-text">
-                                    <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
-                                            aria-hidden="true"></i> </div>
-                                    <div class="more-features-box-text-description">
-                                        <h3>Malaria Detection</h3>
-                                        <p>Malaria is a mosquito-borne infectious disease that affects humans and other animals
-                                        </p>
-                                        <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
-                                    </div>
-                                </div>
-
-                                <div class="more-features-box-text">
-                                    <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
-                                            aria-hidden="true"></i> </div>
-                                    <div class="more-features-box-text-description">
-                                        <h3>Thyroid Detection</h3>
-                                        <p>As this project is done for educational purposes, our machine may not predict
-                                            the expected result.
-                                        </p>
-                                    </div>
-                                </div>
+                        <div class="more-features-box-text">
+                            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
+                                    aria-hidden="true"></i> </div>
+                            <div class="more-features-box-text-description">
+                                <h3>Thyroid Detection</h3>
+                                <p>As this project is done for educational purposes, our machine may not predict
+                                    the expected result.
+                                </p>
                             </div>
                         </div>
                     </div>
-                </div>          
-            </section>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <script src="{{url_for('static',filename='js/jquery.min.js')}}"></script>
+    <script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
+    <script src="{{url_for('static',filename='js/custom.js')}}"></script>
 
-            <script src="/src/static/js/jquery.min.js"></script>
-            <script src="/src/static/js/jquery.easing.min.js"></script>
-            <script src="/src/static/js/bootstrap.min.js"></script>
-            <script src="/src/static/js/custom.js"></script>
-            <script src="contactform/contactform.js"></script>
+   
 </body>
 
 </html>
