--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,14 +14,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/font-awesome.min.css')}}">
   <link rel="stylesheet" type="text/css"  href="{{url_for('static', filename='/css/bootstrap.min.css')}}">
- 
-  {% block custom_css %}
+  
+  
   <!-- Custom css file -->
-  <link rel="stylesheet"  href="{{url_for('static', filename='css/style.css')}}">
-  {% endblock custom_css %}
+  <link rel="stylesheet"  href="{{url_for('static',filename='/css/style.css')}}">
+  
+
 </head>
 
-{% block body %}
+
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
   <!--top-section-->
   <section id="top-section" class="top-section">
@@ -35,7 +36,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="{{ url_for('static',filename='img/logo.png')}}" class="img-responsive"
+              <a class="navbar-brand" href="#"><img src="{{ url_for('static',filename='/img/logo.png')}}" class="img-responsive"
                   style="width:400px;height: 50px; margin-top: -18px;"></a>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
@@ -64,7 +65,8 @@
               <p>Input the facts and see your result in just one click ! Our model will try to predict your disease.
                 <br>
                 We pray for your good health!</p>
-              <a href="disease.html" class="btn btn-appoint">Predict the Disease</a>
+                <a href="{{url_for('disease')}}" class="btn btn-appoint">Predict the Disease</a>
+             
             </div>
             <div class="overlay-detail text-center">
               <a href="#prediction-section"><i class="fa fa-angle-down"></i></a>
@@ -362,12 +364,10 @@
   </footer>
   <!--/ footer-->
   <script src="{{url_for('static',filename='js/jquery.min.js')}}"></script>
-  <script src="{{url_for('static',filename='js/jquery.easing.min.js')}}"></script>
   <script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
   <script src="{{url_for('static',filename='js/custom.js')}}"></script>
-  <script src="contactform/contactform.js"></script>
+ 
 
-{% endblock body %}
   
 </body>
 
