update logo for website tab

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/font-awesome.min.css')}}">
   <link rel="stylesheet" type="text/css"  href="{{url_for('static', filename='/css/bootstrap.min.css')}}">
-  
+  <link rel="icon" href="{{url_for('static', filename='img/health-logo.jpg')}}">
   
   <!-- Custom css file -->
   <link rel="stylesheet"  href="{{url_for('static',filename='/css/style.css')}}">
