update image for index file

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -219,7 +219,7 @@
         </div>
         <div class="col-md-3 col-sm-3 col-xs-6">
           <div class="thumbnail">
-            <img src="{{url_for('static',filename='img/Developernishant.jpeg')}}" alt="rohan Patankar" class="team-img">
+            <img src="{{url_for('static',filename='img/Developerrohan.jpeg')}}" alt="rohan Patankar" class="team-img">
             <div class="caption">
               <h3>Rohan Patankar</h3>
               <p>Machine Learning Developer</p>
