--- a/src/templates/disease.html
+++ b/src/templates/disease.html
@@ -161,14 +161,13 @@
                         </div>
 
                         <div class="more-features-box-text">
-                            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right"
-                                    aria-hidden="true"></i> </div>
+                        
                             <div class="more-features-box-text-description">
-                                <h3>Thyroid Detection</h3>
-                                <p>As this project is done for educational purposes, our machine may not predict
-                                    the expected result.
+                                
+                                <p>As this project is done for educational purposes, user need to check it by their own risk as the model is not 100% accurate and it has some false negatives.
+                                    
                                 </p>
-                                <a href="" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
+                               
                             </div>
                         </div>
                     </div>
