frontend work for breast cancer with flask integration

--- a/src/templates/disease.html
+++ b/src/templates/disease.html
@@ -100,7 +100,7 @@
                                 <p>Breast cancer is better to be used by
                                     health professionals who want to save time and have some experience in the
                                     related area.</p>
-                                <a href="#" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
+                                <a href="{{url_for('breastcancer')}}" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
 
                             </div>
                         </div>
@@ -112,7 +112,7 @@
                                 <p>Diabetes mellitus, commonly known as just diabetes, is a group of metabolic disorders
                                     characterized by a high blood sugar level over a prolonged period of time.
                                 </p>
-                                <a href="" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
+                                <a href="#" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
                             </div>
 
                         </div>
@@ -134,7 +134,7 @@
                                 <p>Pneumonia is an inflammatory condition of the lung primarily affecting the small air
                                     sacs known as alveoli.
                                 </p>
-                                <a href="" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
+                                <a href="#" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
                             </div>
                         </div>
                         <div class="more-features-box-text">
@@ -146,7 +146,7 @@
                                     types of tumors:
                                     malignant tumors and benign (non-cancerous) tumors
                                 </p>
-                                <a href="" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
+                                <a href="#" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
                             </div>
                         </div>
                         <div class="more-features-box-text">
