--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -62,12 +62,12 @@ top-section
     border-radius: 0px;
 }
 .navbar-default {
-    background-color: rgb(253, 250, 250);
+    background-color: rgb(253, 253, 253);
     padding: 20px 0;
     transition: all 0.3s;
 }
 .navbar-default {
-    background-color: transparent;
+    background-color:rgba(6, 58, 82, 0.78);
     border: 0px;
 }
 .navbar {
