--- a/src/templates/heartdisease.html
+++ b/src/templates/heartdisease.html
@@ -7,12 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Heartdiseases</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/css/bootstrap.min.css">
-  
-  <link rel="stylesheet" href="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="{{url_for('static', filename='img/disease2page.png')}}">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/font-awesome.min.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/bootstrap.min.css')}}">
+
+    <link rel="stylesheet" href="{{url_for('static', filename='/css/style.css')}}">
 
 </head>
     
@@ -28,8 +29,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/logo.png" class="img-responsive"
-                  style="width:400px;height: 50px; margin-top: -18px;"></a>
+              <a class="navbar-brand" href="#"><img src="{{url_for('static', filename='img/logo.png')}}"
+                class="img-responsive" style="width:400px;height: 50px; margin-top: -18px;"></a>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
               <ul class="nav navbar-nav">
