add frontend design for various diseases

--- a/src/templates/breastcancer.html
+++ b/src/templates/breastcancer.html
@@ -66,8 +66,8 @@
 
                     <label class="col-md-4 control-label"></label>
                     <div class="col-md-4 inputGroupContainer">
-                     <p style="color:rgb(65, 26, 8)">BREAST CANCER DIAGNOSIS</p>
-                     <p style="color:rgb(4, 61, 54)">Please, Fill up the form to get the prediction</p>
+                      <p style="color:rgb(65, 26, 8)">BREAST CANCER DIAGNOSIS</p>
+                      <p style="color:rgb(4, 61, 54)">Please, Fill up the form to get the prediction</p>
                       <div class="input-group">
                         <span class="input-group-addon"></span>
                         <input name="Diagnosis" placeholder="Diagnosis" class="form-control" type="text">
@@ -321,12 +321,12 @@
                 </fieldset>
               </form>
             </div>
-          </div><!-- /.container -->
+          </div>
         </div>
       </div>
     </div>
-    
-    
+
+
   </section>
 
   <!--about-->
@@ -356,7 +356,7 @@
                   <li>4. Change the breast size</li>
                   <li>5. Fluid comig from the nipple</li>
                   <li>6. Red scaly patch of skin on the breast</li>
-                 
+
 
                 </ul>
 
@@ -374,7 +374,7 @@
                   <li>4. Maintain your blood sugar level</li>
                   <li>5. Keeps your body physically active</li>
                 </ul>
-                
+
 
               </div>
             </div>
@@ -390,7 +390,7 @@
                   <li>5. Radition therapy</li>
                 </ul>
 
-               
+
               </div>
 
             </div>
