--- a/src/templates/disease.html
+++ b/src/templates/disease.html
@@ -89,7 +89,8 @@
                                 <p>Together CVD resulted in
                                     17.9 million deaths (32.1%) in 2015, up from 12.3 million (25.8%) in 1990.
                                 </p>
-                                <a href="#" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
+                                <a href="{{url_for('heart')}}" style="color: #0cb8b6; padding-top:10px;">Predict with
+                                    user input</a>
                             </div>
                         </div>
                         <div class="more-features-box-text">
@@ -100,7 +101,8 @@
                                 <p>Breast cancer is better to be used by
                                     health professionals who want to save time and have some experience in the
                                     related area.</p>
-                                <a href="{{url_for('breastcancer')}}" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
+                                <a href="{{url_for('breastcancer')}}" style="color: #0cb8b6; padding-top:10px;">Predict
+                                    with user input</a>
 
                             </div>
                         </div>
@@ -112,7 +114,8 @@
                                 <p>Diabetes mellitus, commonly known as just diabetes, is a group of metabolic disorders
                                     characterized by a high blood sugar level over a prolonged period of time.
                                 </p>
-                                <a href="#" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
+                                <a href="{{url_for('diabetes')}}" style="color: #0cb8b6; padding-top:10px;">Predict with
+                                    user input</a>
                             </div>
 
                         </div>
@@ -123,7 +126,8 @@
                                 <h3>Thyroid Detection</h3>
                                 <p>The thyroid, or thyroid gland, is an endocrine gland in vertebrates.It is located at
                                     the front of the neck, below the Adam's apple. </p>
-                                <a href="#" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
+                                <a href="{{url_for('thyroid')}}" style="color: #0cb8b6; padding-top:10px;">Predict with
+                                    user input</a>
                             </div>
                         </div>
                         <div class="more-features-box-text">
@@ -134,7 +138,8 @@
                                 <p>Pneumonia is an inflammatory condition of the lung primarily affecting the small air
                                     sacs known as alveoli.
                                 </p>
-                                <a href="#" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
+                                <a href="{{url_for('pneumonia')}}" style="color: #0cb8b6; padding-top:10px;">Predict
+                                    with user input</a>
                             </div>
                         </div>
                         <div class="more-features-box-text">
@@ -161,13 +166,14 @@
                         </div>
 
                         <div class="more-features-box-text">
-                        
+
                             <div class="more-features-box-text-description">
-                                
-                                <p>As this project is done for educational purposes, user need to check it by their own risk as the model is not 100% accurate and it has some false negatives.
-                                    
+
+                                <p>As this project is done for educational purposes, user need to check it by their own
+                                    risk as the model is not 100% accurate and it has some false negatives.
+
                                 </p>
-                               
+
                             </div>
                         </div>
                     </div>
