--- a/src/templates/diabetes.html
+++ b/src/templates/diabetes.html
@@ -8,19 +8,18 @@
   <title>Diabetes</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="icon" href="{{url_for('static', filename='img/disease2page.png')}}">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css"
-    href="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css"
-    href="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/font-awesome.min.css')}}">
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/bootstrap.min.css')}}">
 
-  <link rel="stylesheet" href="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/css/style.css">
+  <link rel="stylesheet" href="{{url_for('static', filename='/css/style.css')}}">
 
 </head>
 
 <body>
   <section id="top-section" class="top-section">
-    <div class="bg-color">
+    <div class="bg-colo">
       <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
           <div class="col-md-12">
@@ -30,15 +29,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img
-                  src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/logo.png"
+              <a class="navbar-brand" href="#"><img src="{{url_for('static', filename='img/logo.png')}}"
                   class="img-responsive" style="width:400px;height: 50px; margin-top: -18px;"></a>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="disease.html">Home</a></li>
+                <li class="active"><a href="{{url_for('index')}}">Home</a></li>
+                <li class=""><a href="{{url_for('disease')}}">Disease</a></li>
 
-                <li class=""><a href="#prediction">prediction</a></li>
                 <li class=""><a href="#about">About</a></li>
 
               </ul>
@@ -62,13 +60,15 @@
                   <!-- <legend>Enter values!</legend> -->
 
                   <!-- Text input-->
+                  <p style="color:rgb(65, 26, 8)">DIABETES DIAGNOSIS</p>
+                  <p style="color:rgb(4, 61, 54)">Please, Fill up the form to get the prediction</p>
 
                   <div class="form-group">
                     <label class="col-md-4 control-label"></label>
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="Pregnancies" placeholder="" class="form-control" type="text">
+                        <input name="Pregnancies" placeholder="Pregnancies" class="form-control" type="text">
                       </div>
                     </div>
                   </div>
@@ -80,7 +80,7 @@
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="Gluscose" placeholder="" class="form-control" type="text">
+                        <input name="Gluscose" placeholder="Glucose" class="form-control" type="text">
                       </div>
                     </div>
                   </div>
@@ -91,7 +91,7 @@
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="Bloodpressure" placeholder="" class="form-control" type="text">
+                        <input name="Bloodpressure" placeholder="Blood Pressure" class="form-control" type="text">
                       </div>
                     </div>
                   </div>
@@ -104,19 +104,7 @@
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="SkinThickness" placeholder="" class="form-control" type="text">
-                      </div>
-                    </div>
-                  </div>
-
-                  <!-- Text input-->
-
-                  <div class="form-group">
-                    <label class="col-md-4 control-label"></label>
-                    <div class="col-md-4 inputGroupContainer">
-                      <div class="input-group">
-                        <span class="input-group-addon"></span>
-                        <input name="Isulin" placeholder="" class="form-control" type="text">
+                        <input name="SkinThickness" placeholder="Skin Thickness" class="form-control" type="text">
                       </div>
                     </div>
                   </div>
@@ -128,7 +116,19 @@
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="BMI" placeholder="" class="form-control" type="text">
+                        <input name="Isulin" placeholder="Insulin" class="form-control" type="text">
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Text input-->
+
+                  <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4 inputGroupContainer">
+                      <div class="input-group">
+                        <span class="input-group-addon"></span>
+                        <input name="BMI" placeholder="BMI" class="form-control" type="text">
                       </div>
                     </div>
                   </div>
@@ -144,7 +144,8 @@
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="DiabetesPedigreeFunction" placeholder="" class="form-control" type="text">
+                        <input name="DiabetesPedigreeFunction" placeholder="Diabetes Pedigree Function"
+                          class="form-control" type="text">
                       </div>
                     </div>
                   </div>
@@ -155,7 +156,7 @@
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="Age" placeholder="" class="form-control" type="text">
+                        <input name="Age" placeholder="Age" class="form-control" type="text">
                       </div>
                     </div>
                   </div>
@@ -172,7 +173,7 @@
                   <div class="form-group">
                     <label class="col-md-4 control-label"></label>
                     <div class="col-md-4">
-                      <button type="submit" class="btn btn-warning">Send <span
+                      <button type="submit" class="btn btn-warning">Predict<span
                           class="glyphicon glyphicon-send"></span></button>
                     </div>
                   </div>
@@ -217,7 +218,7 @@
                   <li>3. Frequent urination</li>
                 </ul>
 
-                <a href="Diabetes.html" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+
               </div>
             </div>
             <div class="more-features-box-text">
@@ -232,7 +233,7 @@
                   <li>5. Maintain your blood sugar level</li>
                   <li>6. Keeps your body physically active</li>
                 </ul>
-                <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+
 
               </div>
             </div>
@@ -244,7 +245,7 @@
                   <li>1. Healthy diet</li>
                   <li>2. Physical exercise</li>
                 </ul>
-                <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+
               </div>
 
             </div>
@@ -256,11 +257,9 @@
   </section>
 
 
-  <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/jquery.min.js"></script>
-  <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/jquery.easing.min.js"></script>
-  <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/bootstrap.min.js"></script>
-  <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/custom.js"></script>
-  <script src="contactform/contactform.js"></script>
+  <script src="{{url_for('static',filename='js/jquery.min.js')}}"></script>
+  <script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
+  <script src="{{url_for('static',filename='js/custom.js')}}"></script>
 </body>
 
 </html>
