--- a/src/templates/pneumonia.html
+++ b/src/templates/pneumonia.html
@@ -8,13 +8,12 @@
   <title>Heartdiseases</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="icon" href="{{url_for('static', filename='img/disease2page.png')}}">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css"
-    href="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css"
-    href="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/font-awesome.min.css')}}">
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/bootstrap.min.css')}}">
 
-  <link rel="stylesheet" href="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/css/style.css">
+  <link rel="stylesheet" href="{{url_for('static', filename='/css/style.css')}}">
 
 </head>
 
@@ -30,15 +29,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img
-                  src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/static/img/logo.png"
+              <a class="navbar-brand" href="#"><img src="{{url_for('static', filename='img/logo.png')}}"
                   class="img-responsive" style="width:400px;height: 50px; margin-top: -18px;"></a>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="disease.html">Home</a></li>
+                <li class="active"><a href="{{url_for('index')}}">Home</a></li>
+                <li class=""><a href="{{url_for('disease')}}">Disease</a></li>
 
-                <li class=""><a href="#prediction">prediction</a></li>
                 <li class=""><a href="#about">About</a></li>
 
               </ul>
@@ -48,7 +46,7 @@
 
         </div>
       </nav>
-      
+
     </div>
     </div>
     </div>
@@ -79,16 +77,16 @@
               <div class="more-features-box-text-description">
                 <h3>Symptoms</h3>
                 <ul>
-                   
-                        <li>1. Cough</li>
-                        <li>2. Fever</li>
-                        <li>3. Fatigue</li>
-                        <li> 4. Sputum</li>
-                        <li> 5. chest pain</li>
-                        <li>6. Shortness of breath</li>
+
+                  <li>1. Cough</li>
+                  <li>2. Fever</li>
+                  <li>3. Fatigue</li>
+                  <li> 4. Sputum</li>
+                  <li> 5. chest pain</li>
+                  <li>6. Shortness of breath</li>
                 </ul>
 
-                <a href="Diabetes.html" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+
               </div>
             </div>
             <div class="more-features-box-text">
@@ -100,7 +98,6 @@
                   <li>2. Environmental measure</li>
                   <li>3. Appropriate treatment</li>
                 </ul>
-                <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
 
               </div>
             </div>
@@ -109,14 +106,14 @@
               <div class="more-features-box-text-description">
                 <h3>Treatment</h3>
                 <ul>
-                    <li>1. Medication</li>
-                    <li>2. OTC Medication</li>
-                    <li>3. Oxygen therapy</li>
-                    <li>4. Respiratory therapy</li>
-                    
-                    <li>5. Antibiotics injected into vein</li>
-                  </ul>
-                <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+                  <li>1. Medication</li>
+                  <li>2. OTC Medication</li>
+                  <li>3. Oxygen therapy</li>
+                  <li>4. Respiratory therapy</li>
+
+                  <li>5. Antibiotics injected into vein</li>
+                </ul>
+
               </div>
 
             </div>
@@ -128,11 +125,9 @@
   </section>
 
 
-  <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/jquery.min.js"></script>
-  <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/jquery.easing.min.js"></script>
-  <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/bootstrap.min.js"></script>
-  <script src="/home/apsara/Desktop/Onsite-Health-Diagnostic-OHD/src/assets/js/custom.js"></script>
-  <script src="contactform/contactform.js"></script>
+  <script src="{{url_for('static',filename='js/jquery.min.js')}}"></script>
+  <script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
+  <script src="{{url_for('static',filename='js/custom.js')}}"></script>
 </body>
 
 </html>
